# hit-ai-unleashed

./: .env.example  README.md  main.py  pyproject.toml
agent_with_tools/simple_tools/: simple_file_tool.py  simple_sqrt_tool.py
agent_with_tools/web_search/: web_search_tool.py
mcps/local/: mcp_client.py  mcp_server.py
mcps/online/: mcp_online.py
memories/: hooks_basics.py  shortterm_memory_basic.py  summarize_messags.py
multimodal/: audio_multimodel.py  images_multimodal.py
rags/: basic_rag.py  rag_agent.py
simple_agents/: simple_agents.ipynb  streaming.py
