[project]
name = "ai-unleashed-hit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.7",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-tavily>=0.2.18",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
]
